k8s/docnearme-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docnearme-deployments
  labels:
    app: docnearme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docnearme
  template:
    metadata:
      labels:
        app: docnearme
    spec:
      containers:
        - name: docnearme-deployments
          image: mohamedtergui/docnearme-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: docnearme-service
spec:
  selector:
    app: docnearme
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
