k8s/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: docnearme.local
      http:
        paths:
          - path: /testroute(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 8080
          - path: /api/v1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: docnearme-service
                port:
                  number: 8080
